fix: fix song search; fix song data layer methods
