# service/docs/swagger.json
@@ -203,7 +203,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "group",
+                        "name": "artistName",
                         "in": "query"
                     },
                     {
@@ -214,11 +214,6 @@
                     {
                         "type": "string",
                         "name": "name",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "text",
                         "in": "query"
                     }
                 ],
